pkg/check/testdata/ub/types/valid/nullable-default-null.ub
resources: {
  server: ext.server {
    name:    'null'
    profile: null
  }
}
