pkg/check/testdata/ub/types/invalid/nullable-default-missing-required.ub
resources: {
  server: ext.server {
    profile: 'dev'
  }
}
